--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,7 +5,7 @@
 }
 
 .inner {
-  border: .1rem;
+  border: 0.1rem;
   border-color: black;
   border-style: solid;
   text-align: center;
@@ -19,9 +19,13 @@
 }
 
 .inner::after {
-  background-image: linear-gradient(to top, rgba(10,17,25,0.35) 5%, rgba(10,17,25,0) 35%);
+  background-image: linear-gradient(
+    to top,
+    rgba(10, 17, 25, 0.35) 5%,
+    rgba(10, 17, 25, 0) 35%
+  );
   background-size: cover;
-  content: '';
+  content: "";
   display: block;
   height: 100%;
   left: 0;
@@ -31,13 +35,13 @@
   pointer-events: none;
 }
 
-.inner>h2 {
+.inner > h2 {
   position: absolute;
   left: 2rem;
   bottom: 2rem;
   z-index: 1;
   text-transform: uppercase;
-  font-size: .7rem;
+  font-size: 0.7rem;
   font-weight: 300;
   letter-spacing: 0.1rem;
   line-height: 1.5;
